# EPLAN_eView_Extractor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
docs/Python_Projekt/: TextExtractor 1.py
src/: chromedriver_manager.rs  config.rs  crypto.rs  main.rs
src/auth/: microsoft.rs
src/export/: csv.rs  excel.rs  json.rs  mod.rs
src/models/: mod.rs  plc_data.rs
src/scraper/: browser.rs  extractor.rs  mod.rs
src/ui/: app.rs  mod.rs  table_view.rs  themes.rs
