[package]
name = "eview_scraper"
version = "1.0.0"
edition = "2021"
authors = ["EPLAN eVIEW Scraper"]
description = "Professional EPLAN eVIEW SPS table extractor with GUI"

[dependencies]
# GUI Framework
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Web Automation
thirtyfour = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing
regex = "1.11"

# Excel Export
calamine = "0.26"
rust_xlsxwriter = "0.79"

# CSV Export
csv = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
directories = "5.0"

# Image processing for embedded icons
image = "0.25"

# Cryptography for password encryption
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"

# HTTP client for ChromeDriver download
reqwest = { version = "0.12", features = ["json"] }

# ZIP handling for ChromeDriver
zip = "2.2"

# Windows specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "eview_scraper"
path = "src/main.rs"